# mave2imap

./: .gitattributes  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  mave2imap.yml  pyproject.toml  setup.cfg
.github/: CONTRIBUTING.md
.github/workflows/: CI.yaml
devtools/: README.md
docs/: Makefile  README.md  api.rst  conf.py  developer_guide.rst  getting_started.rst  index.rst  make.bat  user_guide.rst
mave2imap/: CombineMultiExp.py  ReadAssembler.py  ReadParser.py  __init__.py  lr_tools.py  mave2imap.py
mave2imap/tools/: aa2nuc.pickle  nuc2aa.pickle  nuc2abundance.pickle
ngs2imap/: __init__.py
ngs2imap/tests/: test_ngs2imap.py
