[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"
# Self-descriptive entries which should always be present
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "mave2imap"
version = "1.0.0.0.3"
description = "This project is intended for infering and mapping interface hotspots based on results from MAVE (Multiplexed Assays of Variant Effects)."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Aravindan Arun Nadaradjane", email = "arunnatrajanravi@gmail.com" },
    { name = "Juan Pablo Guzmán Álvarez", email = "jpguz0709@hotmail.com"},
    { name = "Oscar H.P. Ramos", email = "oscar.pereira-ramos@cea.fr" },
    { name = "Raphael Guerois", email = "raphael.guerois@cea.fr" },
]

# See https://pypi.org/classifiers/
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
#Declare any run-time dependencies that should be installed with the package.
dependencies = [
    "async-lru==2.0.4",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "jupyter-lsp==2.2.5",
    "jupyterlab==4.3.4",
    "kaleido==0.2.1",
    "nglview==3.1.2",
    "notebook==7.3.2",
    "h5py==3.11.0",
#  "pytest>=6.1.2",
]

[project.scripts]
mave2imap = "mave2imap:main"  # main pipeline wrapper 

[options]
include_package_data = true

[tool.setuptools.package-data]
"mave2imap" = ["tools/*.pickle"]

[tool.setuptools.packages.find]
include = ["mave2imap*"]

